Fixed element spacing for medium devices

--- a/src/App.css
+++ b/src/App.css
@@ -377,6 +377,7 @@ padding-right: 70%;
 .restart_button_container {
 margin-top: -1%;
 margin-left: -1%;
+width: 80%;
 }
 
 .restart_button {
@@ -393,10 +394,10 @@ margin-left: 10px;
 }
 
 .file-name {
-  margin-left: 63%;
-  margin-top: -7.5%;
+  margin-left: 58%;
+  margin-top: -9%;
   margin-bottom: 1%;
-  font-size: 12px;
+  font-size: 10px;
   color: #555;
   word-break: break-all;
 }
@@ -419,10 +420,24 @@ margin-left: 10px;
   background-color: #3354ff;
   color: white;
   border: none;
-  padding: 10px 50px;
+  padding: 10px 18px;
   border-radius: 50px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 12px;
+}
+
+.file-upload-container {
+  width: 45%;
+  margin-left: -1%;
+}
+
+.file-upload-container p {
+  font-size: 12px;
+}
+
+.file-upload-container.drag-over {
+  border: 2px dashed #3354ff;
+  background-color: rgba(76, 175, 80, 0.1);
 }
 }
 
